@@ -80,6 +80,7 @@ public abstract class AbstractAutocannonBreechBlockEntity extends AutocannonBloc
 	public void tick() {
 		super.tick();
 		this.allTick(this.level);
+		this.firingCooldown = 0;
 	}
 
 	@Override
