@@ -8,10 +8,13 @@ import org.spongepowered.asm.mixin.injection.Inject;
 import org.spongepowered.asm.mixin.injection.callback.CallbackInfo;
 
 import net.minecraft.server.level.ServerEntity;
+import net.minecraft.server.level.ServerPlayer;
 import net.minecraft.world.entity.Entity;
 import rbasamoyai.createbigcannons.cannon_control.contraption.PitchOrientedContraptionEntity;
 import rbasamoyai.createbigcannons.multiloader.NetworkPlatform;
+import rbasamoyai.createbigcannons.munitions.autocannon.AbstractAutocannonProjectile;
 import rbasamoyai.createbigcannons.network.ClientboundPreciseRotationSyncPacket;
+import rbasamoyai.createbigcannons.network.ClientboundSetAutocannonRoundDisplacementPacket;
 
 @Mixin(ServerEntity.class)
 public class ServerEntityMixin {
@@ -26,6 +29,13 @@ public class ServerEntityMixin {
 			}
 			this.entity.hasImpulse = false;
 		}
+	}
+
+	@Inject(method = "addPairing",
+			at = @At(value = "INVOKE", target = "Lnet/minecraft/server/level/ServerEntity;sendPairingData(Ljava/util/function/Consumer;)V", shift = At.Shift.AFTER))
+	private void createbigcannons$addPairing(ServerPlayer player, CallbackInfo ci) {
+		if (this.entity instanceof AbstractAutocannonProjectile projectile)
+			NetworkPlatform.sendToClientPlayer(new ClientboundSetAutocannonRoundDisplacementPacket(projectile), player);
 	}
 
 }
